--- a/src/assets/css/base.css
+++ b/src/assets/css/base.css
@@ -1,13 +1,13 @@
 /* semantic color variables for this project */
 :root {
-  --color-background: #FFFF;
-  --color-heading: #459c63;
-  --color-text: #5db67c;
+  --color-background: #f2f2f2;
+  --color-heading: #67b181;
+  --color-text: #73BF8E;
   --border-radius: 12px;
 
   /* Botões */
-  --color-background-btn-primary: #5db67c;
-  --color-background-btn-primary-hover: #459c63;
+  --color-background-btn-primary: #73BF8E;
+  --color-background-btn-primary-hover: #67b181;
   --color-text-btn-primary: #fff;
 
   --color-background-btn-secondary: #6c757d;
