--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -4,14 +4,6 @@
   box-sizing: border-box;
 }
 
-h1 {
-  font-size: 2rem;
-  font-weight: 500;
-  line-height: 1.2;
-  margin: 0 0 1rem 0;
-  color: var(--color-heading);
-}
-
 body {
   margin: 0;
   min-height: 100vh;
@@ -20,23 +12,22 @@ body {
   transition:
     color 0.5s,
     background-color 0.5s;
-  font-family:
-    Inter,
-    -apple-system,
-    BlinkMacSystemFont,
-    'Segoe UI',
-    Roboto,
-    Oxygen,
-    Ubuntu,
-    Cantarell,
-    'Fira Sans',
-    'Droid Sans',
-    'Helvetica Neue',
-    sans-serif;
   font-size: 15px;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+h1 {
+  font-size: 2rem;
+  font-weight: 550;
+  margin: 0 0 0.5rem 0;
+  color: var(--color-heading);
+  font-family: Montserrat bold;
+}
+
+p {
+  font-family: Montserrat light;
 }
 
 .input-base {
