feat: box component fix: responsiveness

--- a/src/assets/css/base.css
+++ b/src/assets/css/base.css
@@ -22,4 +22,7 @@
   --color-border-input: #dbd8d8;
   --color-background-input: #ffff;
   --color-input-placeholder: #dbd8d8;
+
+  /* Box */
+  --color-box-background: #ffff;
 }
