--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -12,16 +12,16 @@ body {
   transition:
     color 0.5s,
     background-color 0.5s;
-  font-size: 15px;
+  font-size: 16px;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
 h1 {
-  font-size: 2rem;
   font-weight: 550;
-  margin: 0 0 0.5rem 0;
+  margin: 0;
+  font-size: 30px;
   color: var(--color-heading);
   font-family: Montserrat bold;
 }
