--- a/src/assets/css/base.css
+++ b/src/assets/css/base.css
@@ -21,8 +21,10 @@
   /* Input */
   --color-border-input: #dbd8d8;
   --color-background-input: #ffff;
-  --color-input-placeholder: #dbd8d8;
+  --color-placeholder-input: #dbd8d8;
+  --color-background-input-disabled: #f2f2f2;
+  --color-text-input-disabled: #a8a8a8;
 
   /* Box */
-  --color-box-background: #ffff;
+  --color-background-box: #ffff;
 }
