feat: navside Comp
Co-authored-by: igorssant <igorssant@hotmail.com>

--- a/src/assets/css/base.css
+++ b/src/assets/css/base.css
@@ -27,4 +27,10 @@
 
   /* Box */
   --color-background-box: #ffff;
+
+  /* NavSide */
+  --color-background-navside: #ffff;
+  --color-border-navside: #dbd8d8;
+  --color-background-navside-hover: #73BF8E;
+  --color-text-navside-hover: #ffff;
 }
