--- a/src/assets/css/base.css
+++ b/src/assets/css/base.css
@@ -3,7 +3,7 @@
   --color-background: #f2f2f2;
   --color-heading: #67b181;
   --color-text: #73BF8E;
-  --border-radius: 12px;
+  --border-radius: 5px;
 
   /* Botões */
   --color-background-btn-primary: #73BF8E;
@@ -24,6 +24,7 @@
   --color-placeholder-input: #dbd8d8;
   --color-background-input-disabled: #f2f2f2;
   --color-text-input-disabled: #a8a8a8;
+  --color-text-input: #8a8a8a;
 
   /* Box */
   --color-background-box: #ffff;
